tests/ui/parser/range-4.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `..`
  --> $DIR/range-4.rs:4:16
   |
LL |     let r = ..1..2;
   |                ^^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to 1 previous error

